<resources>
    <string name="app_name">JavaTravel</string>
    <string name="judul_kampung_baduy">
        Kampung Baduy
    </string>
    <string name="artikel1">Suku Baduy, secara etimologi kata Baduy dipersamakan dengan kelompok atau kabilah Badawi di Arab yang merupakan masyarakat yang suka berpindah-pindah atau nomaden.
    </string>
    <string name="artikel2">

Menurut saya Baduy sendiri adalah sebutan kepada warga Desa Kanekes yang dianggap sering berpindah-pindah tempat. Mungkin Anda juga sering melihat Suku Baduy melakukan perjalanan jauh, itulah yang menyebabkan mereka disebut Baduy.

    </string>
    <string name="judul_ocean">Ocean Park BSD City Serpong</string>
    <string name="artikel3">
        >Ocean Park Water Adventure atau Ocean Park BSD adalah theme park terkenal yang berada di daerah BSD. Tempat wisata ini sering mengadakan promo, jadi harga tiket masuk Ocean Park bisa lebih murah. Promo ini biasanya berupa promo kartu kredit Ocean Park BSD, promo Ocean Park untuk group atau rombongan dan promo Ocean Park BSD diskon langsung

    </string>
    <string name="judul_sawarna">Pantai Sawarna</string>
    <string name="artikel4">Wisata Sawarna yang berlokasi di kecamatan Bayah, Kabupaten Lebak, Provinsi Banten, merupakan tempat wisata yang sekarang banyak dikunjungi wisatawan luar kota, khususnya dari Jakarta, Bogor dan Bandung. Tempat alternatif untuk liburan.
Sawarna memiliki segudang tempat wisata yang terbagi menjadi dua jenis wisata, yaitu wisata pantai dan wisata gua. Dan dibawah ini adalah tempat wisata yang banyak di kunjungi wisatawan.

</string>
    <string name="judul_peucang">Pulau Peucang</string>
    <string name="artikel5">Pulau Peucang merupakan lokasi yang paling ramai dikunjungi oleh para pengunjung baik dalam maupun luar negeri. Pulau dengan luas kawasan ± 450 ha ini dilengkapi dengan sarana dan prasarana serta berbagai obyek wisata alam yang dapat dikunjungi oleh wisatawan. Fasilitas yang ada di Pulau Peucang antara lain penginapan, pusat informasi, dermaga, dan lain sebagainya.

    </string>
    <string name="judul_umang">Pulau Umang</string>
    <string name="artikel6">Apa yang Terbukti Hari Ini Dahulu Adalah Imajinasi! Bayangkan .... tinggal di Island Resort di pulau pribadi seluas 5 hektar yang terletak 183 km dari kota Jakarta yang ramai, .... surga mewah yang berada di antara Laut Jawa Barat yang menawan dan pesona pegunungan di sekitarnya, .. .. selesai dengan bahan terbaik dalam nada-nada menenangkan dari detail kayu dengan semua fasilitas modern dari sebuah hotel yang bagus. Bayangkan ...

</string>
    <string name="judul_tanjung_lesung">Pantai Tanjung Lesung</string>
    <string name="artikel7">Berada di pantai barat pulau Jawa, Tanjung Lesung dikenal merupakan salah satu area dengan pantai terbaik di dearah Banten yang cocok untuk berenang dengan keindahan pasir putihnya yang menggoda.
        Hanya membutuhkan waktu 3 jam dari Jakarta, anda akan menemukan lokasi yang sangat cocok bagi para pecinta pantai mengingat area Tanjung Lesung yang murni </string>
    <string name="artikel8">dan senantiasa terjaga dibawah pengelola kawasan Jababeka. Kecantikan Tanjung Lesung sendiri makin bertambah dengan adanya pemandangan gunung Kraktau yang telah dikenal di seluruh dunia.
    Kekayaan wisata Tanjung Lesung tidak hanya terdapat pada pantai yang indah, mengingat kawasan yang luas hingga 1500 ha, selain wisata pantai, wisatawan juga dapat sekaligus menikmati suasana hutan dan sawah pedesaan beserta budaya masyarakat sekitar yang masih asli.
</string>
    <string name="judul_kidzania">Kidzania</string>
    <string name="artikel51">Taman Nasional Baluran terdapat di provinsi Jawa Timur. Wisata Banyuwangi Jawa Timur ini merupakan kekayaan alam alami selain Taman Nasional Alas Purwo yang terkenal dengan keangkerannya. Ada kesamaan tempat dari kedua taman tersebut. Namun, alas purwo lebih dikenal dengan pantai-pantainya yang berombak besar.</string>
    <string name="artikel52">Taman Nasional Baluran Situbondo Jawa Timur merupakan sebuah taman nasional dengan luas area 25.000 hektar. Anda jangan mengira taman nasional ini seperti taman-taman lain yang berupa hutan belantara. Memang pada sebagian wilayahnya, taman baluran menyediakan juga tempat konservasi alam berupa hutan lindung. Tetapi, wilayah utama wisata baluran adalah hamparan padang rumput yang amat luas. Luas savana baluran ini mencapai sepertiga dari luas keseluruhn taman nasional, yaitu 10.000 hektar. Savana baluran ini adalah savana terluas yang dimiliki Pulau Jawa.</string>
    <string name="artikel53">Lokasi Taman Nasional Baluran Jawa Timur ini digadang-gadang mirip dengan savana yang berada di benua Afrika. Tidak salah lagi, rerumputan yang terbentang di sepanjang mata memandang, pohon-pohon dengan batang yang mekar terlihat satu dua di atas rumput, dan yang paling menyejukkan mata adalah backgound gunung baluran yang tinggi menjulang yang terlihat mulai dari pangkal hingga pucuk gunung dalam cuaca cerah. Tepat sekali jika julukan Africa Van Java melekat pada taman baluran ini.</string>
    <string name="artikel54">Taman Nasional Baluran melindungi hewan-hewan padang rumput seperti banteng, kerbau, rusa, monyet berekor panjang, dan burung pemilik ekor panjang, burung merak. Anda bisa melihat keberadaan mereka yang sedang merumput di tengah savana. Sekali-sekali, sekawanan rusa akan melintasi kendaraan Anda yang sedang melewati jalan. Pemandangan ini kerap kali dijumpai di padang rumput seperti ini. Seolah-olah Anda akan dibawa jauh melompat ke afrika dengan dilihatkan situasi demikian.

</string>
    <string name="artikel116"> Gunung Bromo menyimpan keindahan alam yang sayang untuk dilewatkan. Gunung berapi yang masih aktif ini secara administratif berada di empat wilayah kabupaten di Jawa Timur, antara lain Kabupaten Malang, Pasuruan, Lumajang dan Probolinggo. Hal ini memudahkan wisatawan untuk datang dari arah manapun. Gunung ini merupakan bagian dari Taman Nasional Bromo Tengger Semeru dan telah menjadi tempat wisata paling terkenal di provinsi Jawa Timur. Taman nasional seluas 800 km persegi ini melingkupi kawasan Gunung Bromo dan Gunung Semeru.</string>
    <string name="artikel117">Gunung ini terkenal dengan pemandangan matahari terbitnya yang indah. Untuk bisa menyaksikan fenomena ini, para wisatawan harus naik ke Puncak Penanjakan yang merupakan lokasi terbaik untuk dapat melihat matahari terbit. Jika menginap di sebuah penginapan anda dapat berpesan kepada pemilik penginapan untuk dibangunkan di pagi, karena keesokan harinya sekitar jam 2 dini hari, anda akan dibangunkan untuk persiapan mendaki</string>
    <string name="artikel118">karena mendaki akan terbayar lunas dengan pemandangan matahari terbit yang luar biasa. Saat matahari perlahan merangkak naik, susasana akan sangat tenang dan hanya terdengar bunyi jepretan kamera wisatawan.
Gunung Bromo memiliki kawah dengan panjang diameter sekitar 800 meter dari utara ke selatan dan 600 meter dari barat ke timur. </string>
    <string name="artikel119">Dengan kandungan belerang yang ada di kawah, tak mengherankan jika bau belerang cukup tajam tercium saat anda berada berdiri di tepiannya. Untuk dapat menikmati keindahan kawah ini, anda harus menaiki 250 anak tangga terlebih dahulu. Jika ini terdengar melelahkan, tersedia kuda-kuda milik warga sekitar yang bisa anda sewa.

</string>
    <string name="artikel139">Taman Pintar Yogyakarta (TPY ) adalah salah satu wisata pendidikan atau wisata edukasi paling banyak di kunjungi di Yogyakarta.  Rasanya belum lengkap bila mengunjungi kota Yogyakarta tidak menyempatkan diri bermain ke Taman Pintar  Yogyakarta bersama keluarga dan anak-anak. Pada bangunannya menampilkan nuansa modern dan tradisional yang mempunyai keindahan tersendiri. </string>
    <string name="artikel140">Taman ini menawarkan wahana belajar dan rekreasi yang cukup lengkap untuk anak-anak, baik usia pra sekolah sampai tingkat sekolah menengah. Pada rentang usia tersebut merupakan generasi penerus yang potensial mendapat pencerahan belajar ilmu dann tekhnologi (iptek)</string>
    <string name="artikel141">Taman Pintar didirikan atas gagasan dari Walikota Yogyakarta Herry Zudianto SE, Akt, MM yang selanjutnya dibangun diatas tanah seluas 12.000 m2. Wisatawan yang masuk ke taman ini bisa langsung mencoba dan menyaksikan hasil karya dari sebuah inovasi dan teknologi dan permainan yang sangat menarik dan banyak bermuatan edukasi pagi anak-anak</string>
    <string name="artikel142">Terbentuknya taman pintar Yogyakarta  semacam ini sebelumnya terinspirasi dari berdirinya pusar peragaan iptek yang sudah ada sebelumnya yang berlokasi di Taman Mini Indonesia Indah Jakarta yang selanjutnya menjadi contoh untuk pengembangan di daerah lain. Di Yogyakarta dengan Taman Pintarnya, dan di Jawa Timur dengan Jawa Timur Parknya dan semoga segera menyusul daerah lain untuk membangun tempat wisata berorientasi pendidikan untuk anak-anak.
</string>
    <string name="artikel143">Taman Pintar dibangun mulai bulan Mei 2006 dan setahun kemudian pada tanggal 9 Juni 2007 diresmikan oleh Gubernur Daerah Istimewa Yogyakarta, Sultan Hamengku Buwono X bersama dua menteri yaitu Menteri Riset dan Tekhnologi ( Menristek ), Kusmayanto Kadiman, P.h.D dan menteri Pendidikan Nasional ( Mendiknas ), Prof. Dr. Bambang Sudibyo, MBA.
</string>
    <string name="artikel144">
Taman ini menawarkan model edukasi atau pembelajaran yang memadukan konsep pendidikan dan permainan dengan media yang menarik sehingga dapat merangsang keingintahuan anak dan memancing kreativitas anak terhadap iptek.

</string>
    <string name="title2jtm">RUJAK CINGUR</string>
    <string name="rujakcingur1">Nah, jika kuliner Rujak Cingur pastinya sebagian besar dari kita pernah mendengar tentangnya bukan? Berbeda dari rujak biasanya yang berisikan irisan buah-buahan dan sambel, Rujak Cingur menjadi kesukaan para pecinta kuliner karena berisikan rujak mulut sapi, cingur, sayuran dan berbagai bahan pelengkap lainnya.</string>
    <string name="rujakcingur2">Tahukah Anda, terdapat satu bumbu yang membuat rujak cingur semakin digemari, yakni perpaduan antara petis, cabe, gula merah plus kacang tanah yang telah digoreng.</string>
    <string name="rujakcingur3">Bumbu tersebut kemudian akan diulek dan ditambahkan sedikit air guna diencerkan. Dijamin, rasa semakin mantap dan nikmat, Anda pasti akan ketagihan dan ingin mencobanya lagi dan lagi.</string>
    <string name="title1">EASY PACKING</string>
    <string name="credit">© TO BUZZFEED</string>
    <string name="article">
        \n
        ➤ Kemas semua barang Anda yang lebih berat (sepatu, tas kosmetik, dll.) di bagian bawah koper Anda sehingga mudah dibawa ke bandara.
        \n \n
        ➤ Ingat fasilitas hotel. Saat ini Anda tidak perlu lagi mengemas pengering rambut, lotion tubuh, kikir kuku, Q-tip, dll. Kamar-kamar tersebut menjadi standar di banyak kamar hotel, terutama di properti bintang 4-5!
        \n \n
        ➤
    </string>
    <string name="notice1"> \n ⇀ IMPORTANT TO NOTICE ↽ </string>
    <string name="title2">\n HOW NOT TO FORGET ANYTHING BEFORE A TRIP</string>
    <string name="article2">
        \n
        ➤ Pisahkan barang-barang penting Anda dari yang Anda inginkan, dan masukanlah dengan keterbatasan barang bawaan.

    </string>
    <string name="title3">\n 5 TIPS FOR PACKING ITEMS</string>
    <string name="article3">
    \n
    ➤ Cara agar isi tas anda tidak terlalu keliahatan besar dan berat dan juga dapat menghemat tempat.
    </string>
    <string name="title4">\n ABOUT JAVA</string>
    <string name="article4">
        \n
        ➤ Bagi anda yang ingin mengenal jawa lebih lanjut
    </string>
    <string name="title5">\n TRAVELING TIPS TO THE BEACH </string>
    <string name="article5">\n
        ➤ ini adalah sedikit tips ketika anda akan berpergian ke pantai
    </string>
</resources>