<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/back222"
    android:orientation="vertical"
    tools:context=".TipsTricks">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/title1"
                android:fontFamily="@font/bebas"
                tools:targetApi="jelly_bean"
                android:textColor="@android:color/black"
                android:gravity="center"/>


            <VideoView
                android:id="@+id/videoView"
                android:layout_width="450dp"
                android:layout_height="200dp"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="121dp"/>



            <TextView
                android:id="@+id/credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:background="@android:color/white"/>


            <TextView
                android:id="@+id/important1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice1"
                android:fontFamily="@font/bebas"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:background="@android:color/white"
                android:elevation="8dp"/>

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article"
                android:fontFamily="@font/louis_b"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:elevation="8dp"
                />

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                android:fontFamily="@font/bebas"
                android:textSize="40sp"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <VideoView
                android:id="@+id/video2"
                android:layout_width="450dp"
                android:layout_height="200dp"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="121dp"/>

            <TextView
                android:id="@+id/important2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice1"
                android:fontFamily="@font/bebas"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/article2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article2"
                android:fontFamily="@font/louis_b"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                />
            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title3"
                android:fontFamily="@font/bebas"
                android:textSize="40sp"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <VideoView
                android:id="@+id/vidio"
                android:layout_width="450dp"
                android:layout_height="200dp"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="121dp"/>

            <TextView
                android:id="@+id/important3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice1"
                android:fontFamily="@font/bebas"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/article3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article3"
                android:fontFamily="@font/louis_b"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                />
            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title4"
                android:fontFamily="@font/bebas"
                android:textSize="40sp"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <VideoView
                android:id="@+id/vidio1"
                android:layout_width="450dp"
                android:layout_height="200dp"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="121dp"/>

            <TextView
                android:id="@+id/important4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice1"
                android:fontFamily="@font/bebas"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/article4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article4"
                android:fontFamily="@font/louis_b"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                />

            <TextView
                android:id="@+id/title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title5"
                android:fontFamily="@font/bebas"
                android:textSize="40sp"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <VideoView
                android:id="@+id/vidio2"
                android:layout_width="450dp"
                android:layout_height="200dp"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="121dp"/>

            <TextView
                android:id="@+id/important5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice1"
                android:fontFamily="@font/bebas"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/article5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article5"
                android:fontFamily="@font/louis_b"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>