<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".TamanBaluran">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<TextView
android:id="@+id/image_baluran"
android:layout_width="match_parent"
android:layout_height="250dp"
    android:text="taman baluran"
    android:textSize="25dp"
    android:textColor="@color/white"
    android:gravity="bottom"
    android:fontFamily="@font/bebas"
android:padding="10dp"
android:background="@drawable/baluran"
android:layout_marginBottom="20dp"/>


    <Button
        android:id="@+id/open_location_button"
        android:layout_width="match_parent"
        android:background="@drawable/custom_button"
        android:layout_below="@id/image_baluran"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="openLocation"
        android:text="Open Location"/>

    <TextView
        android:id="@+id/artikel51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/open_location_button"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"
        android:lineSpacingExtra="5sp"
        android:textSize="20dp"
        android:text="@string/artikel51" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artikel51"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"
        android:id="@+id/satu"
        android:lineSpacingExtra="5sp"
        android:textSize="20dp"
        android:text="@string/artikel52"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/satu"
        android:id="@+id/dua"
        android:textColor="@color/black"
        android:layout_marginBottom="12dp"
        android:lineSpacingExtra="5sp"
        android:textSize="20dp"
        android:text="@string/artikel53"/>

    <TextView
        android:autoLink="web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dua"
        android:textColor="@color/black"
        android:lineSpacingExtra="5sp"
        android:textSize="20dp"
        android:text="@string/artikel54"/>
    </RelativeLayout>

</ScrollView>